# python-library

./: README.md  pyproject.toml
src/: functional_helper.py  pylinq.py
src/pylinq/: functional_helpers.py  option.py  pylinq.py  result.py
tests/: test_functional_helper.py  test_pylinq.py
