[build-system]
requires = [
    "setuptools>=80.3",
    "wheel"
]
build-backend = "setuptools.build_meta"
backend-path = ["."] # Often needed if setuptools needs to find setup.cfg/setup.py for some configs,
                     # but less critical if all config is in pyproject.toml

[project]
name = "pylinq"
version = "0.1.3"
description = "A python implmentation of LINQ as well as some other functional helps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2.post1",
]
authors = [
    { name = "Craig Condie", email = "craig.a.condie@gmail.com" },
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"] 
